# BRClient

./: package.json
app/components/: chat.tsx
src-tauri/: Cargo.toml
src-tauri/src/: main.rs
